tests/syntax/bad/testfile-bad_ident2-1.scala
class  A'A { }
object Main { def main(args: Array[String]) { } }
